# claw-blog

./: .gitignore  .gitignore.bak  Makefile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MCP_SPEC.md  OPENCLAW_SETUP.md  TROUBLESHOOTING.md
mcp-server/: Dockerfile  pyproject.toml  requirements.txt
mcp-server/src/: client.py  config.py  server.py
mcp-server/src/tools/: __init__.py  draft.py  images.py  publish.py  templates.py  translate.py
mcp-server/src/utils/: templates.py
mcp-server/tests/: test_smoke.py
scripts/: test_mcp.py
templates/: default.html  default.json  minimal.html  minimal.json  tech.html  tech.json
