[project]
name = "blog-mcp-server"
version = "0.1.0"
description = "MCP Server for Blog Publishing (MVP)"
authors = [{name = "Blog Hub", email = "admin@example.com"}]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "pillow>=10.0",
    "boto3>=1.34",  # MinIO/S3 support (optional in MVP)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
host = "0.0.0.0"
port = 8090

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx-cgi>=0.1",  # for testing
]

[project.scripts]
blog-mcp = "blog_mcp.server:main"
